# ava-gen

./: .env.example  .gitignore  404.html  README.md  __init__.py  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
cli/: index.html  main.py
configs/: settings.py
core/actionplan/: actionplan_parser.py
core/api/: openai_client.py
core/converter/espresso/: java_extractor.py  (+4 more)
core/interpreter/: intent_interpreter.py  intent_validator.py  models.py  prompts.py  skill_interpreter.py
docs/: cli.md  index.md  running_example.md  runtime_server_client.md  tool_paper.md
eval_data/eval_report/: evaluation_intent_match.csv  evaluation_task_exec.csv
examples/hu.vmiklos.plees_tracker/: app_introduction.txt
exceptions/: exceptions.py
old/: index.html
old/core-modules/: index.html
old/design_actionplan/: index.html
old/getting-started/: index.html
old/intent_validation/: index.html
old/pipeline/: index.html
old/runtime_design/: index.html
running_example/: index.html
runtime/: __init__.py
runtime/agents/: __init__.py  conversation_agent.py
runtime/api/: __init__.py  server.py  session_routes.py
runtime/models/: __init__.py  api_models.py  session_models.py
runtime/store/: __init__.py  actionplan_store.py  log_store.py  session_store.py
runtime_server_client/: index.html
search/: search_index.json
tool_paper/: index.html
workspace/actionplan/: hu.vmiklos.plees_tracker_actionplan.json
workspace/intent/: intent_list_full.json  intent_method_map.json
workspace/skills_description/: hu.vmiklos.plees_tracker_skills_description.json
(+68 files in other folders)
